--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,9 +8,9 @@
             "name": "Python: Module",
             "type": "python",
             "request": "launch",
-            "module": "python",
+            "module": "spotnext",
             "pythonPath": "python3",
-            "cwd": "${workspaceFolder}/gmusic-service/src/main/"
+            "cwd": "${workspaceFolder}/gmusic-service/src/main/python/"
         }
     ]
 }
